[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openbusdata-mcp"
version = "1.0.2"
description = "MCP server for UK Bus Open Data Service with timetable parsing and journey planning"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Andrew Aubury", email = "projects@aubury.me" }
]
keywords = ["mcp", "bus", "open-data", "transport", "uk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "httpx>=0.27",
    "mcp>=1.12",
    "pyyaml>=6.0",
]

[project.scripts]
openbusdata-mcp = "openbusdata_mcp.server:main"

[project.urls]
Homepage = "https://github.com/AndrewAubury/openbusdata-mcp"
Repository = "https://github.com/AndrewAubury/openbusdata-mcp"
Issues = "https://github.com/AndrewAubury/openbusdata-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/openbusdata_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
